# pixano

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  VERSION  check_license_header.py  codecov.yml  gen_ref_pages.py  hatch_build.py  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  stable  test_litellm.py  test_models.py  test_sam2_ray.py  test_text.py  versions.json  vos-sam2-integration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feat_pull_request.md  fix_pull_request.md
.github/workflows/: .pylintrc  backend.yml  docker.yml  docs.yml  format.yml  format_front.yml  frontend.yml  license_check.yml  lint.yml  lint_and_format_back.yml  lint_and_format_front.yml  lint_front.yml  pre-commit.yml  publish.yml  python-format.yml  python-publish.yml  python-test.yml  test.yml  test_back.yml  test_backend.yml  ui-format.yml  update_versions.yml  version.yml
0.5.4/: 404.html  objects.inv  sitemap.xml
0.5.4/api_reference/: index.html
0.5.4/getting_started/: index.html
0.5.4/search/: search_index.json
0.5.4/tutorials/: index.html
0.6.0/api_reference/: index.html
0.6.0/getting_started/: index.html
0.6.0/search/: search_index.json
0.6.0/tutorials/: index.html
0.6.0b6/: sitemap.xml
0.6.0b6/api_reference/: index.html
0.6.0b6/getting_started/: index.html
0.6.0b6/search/: search_index.json
0.6.0b6/tutorials/: index.html
0.6.1/: 404.html  sitemap.xml
0.6.1/api_reference/: index.html
0.6.1/search/: search_index.json
0.6.1/tutorials/: index.html
0.6.10/: sitemap.xml
0.6.10/api_reference/: index.html
0.6.11/: sitemap.xml
0.6.11/getting_started/: index.html
0.6.12/: 404.html
0.6.12/api_reference/: index.html
0.6.12/getting_started/: index.html
0.6.12/tutorials/: index.html
0.6.2/: 404.html  objects.inv  sitemap.xml
0.6.2/getting_started/: index.html
0.6.3/getting_started/: index.html
0.6.4/: sitemap.xml
0.6.5/getting_started/: index.html
0.6.6/: objects.inv  sitemap.xml
0.6.6/search/: search_index.json
0.6.7/: objects.inv  sitemap.xml
0.6.7/assets/: extra.css
0.6.7/search/: search_index.json
0.6.7/tutorials/: index.html
api_reference/: index.html
api_reference/SUMMARY/: index.html
code/: index.html
docker/: .dockerignore  Dockerfile  README.md  build.sh  pixano.sh
dockerfiles/: Dockerfile  Dockerfile.source
docs/: README.md  gen_ref_pages.py  index.md  mkdocs.yml
docs-astro/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs-astro/scripts/: generate_api_docs.py
docs/api_reference/: data_model.md  index.md
docs/code/: index.md  types.md  utils.md
docs/docs/: analytics.md  apps.md  core.md  data.md  index.md  inference.md  tools.md  transforms.md
docs/getting_started/: creating_a_dataset.md  dataset_organization.md  importing_datasets.md  index.md  installing_pixano.md  key_concepts.md  launching_the_app.md  quickstart.md  quickstart_image_preannotation.md  using_the_app.md
docs/overrides/: main.html
docs/restAPI_reference/: data_items.md
docs/tutorial/: create_your_first_library.md  embeddings_for_semantic_search.md
docs/tutorials/: create_your_first_library.md  dataset.md  index.md  interactive_segmentation.md  pre_annotation.md  segmentation_powered_by_sam.md  semantic_search.md
docs/user/: annotator.md  app.md  explorer.md  export.md  import.md  index.md  install.md  launch.md
examples/davis/: generate_sample.py  info.py  schema.py
examples/flir/: generate_sample.py  info.py  schema.py
examples/mel/: __init__.py  info.py
examples/unlabeled_images_folder/: info.py
examples/unlabeled_videos_folder/: generate_sample.py
examples/voc/: generate_sample.py  schema.py
examples/vqav2/: generate_sample.py  info.py  schema.py
getting_started/: index.html
getting_started/exporting_datasets/: index.html
getting_started/importing_datasets/: index.html
getting_started/installing_pixano/: index.html
getting_started/launching_the_app/: index.html
getting_started/using_the_app/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api_reference/: index.html
latest/assets/: extra.css
latest/getting_started/: index.html
latest/search/: search_index.json
latest/tutorials/: index.html
notebooks/: interactive_annotation.ipynb  pre_annotation.ipynb
notebooks/annotation/: interactive_annotation.ipynb  pre_annotation.ipynb
notebooks/dataset/: convert_dataset.ipynb  export_dataset.ipynb  import_dataset.ipynb  template_importer.py  template_loader.py  test.ipynb
notebooks/datasets/: export_dataset.ipynb  import_dataset.ipynb  template_importer.py
notebooks/inference/: embedding_precomputing.ipynb  inference_preannotation.ipynb  pre_annotation.ipynb
notebooks/models/: interactive_annotation.ipynb  pre_annotation.ipynb  semantic_search.ipynb
notebooks/pixano_types/: create_custom_type.ipynb
notebooks/types/: create_custom_type.ipynb  create_type.ipynb
pixano/: __version__.py
pixano/analytics/: __init__.py  feature_statistics.py  image_statistics.py
pixano/api/: __init__.py  datasets.py  items.py
pixano/app/: README.md  __init__.py  display.py  main.py  serve.py  settings.py
pixano/apps/: __init__.py  display.py  main.py  main_test.py  serve.py
pixano/core/: __init__.py  bbox.py  bbox_test.py  camera.py  compressed_rle.py  compressed_rle_test.py  dataset.py  dataset_test.py  depth_image.py  depth_image_test.py  embedding.py  embedding_test.py  features.py  gt_info.py  image.py  image_test.py  models.py  object_annotation.py  object_annotation_test.py  pixano_type.py  pose.py  pose_test.py  pydantic_utils.py  test.ipynb  test_dataset.py  (+2 more)
search/: search_index.json
tests/: check_license_header.py  conftest.py
ui/: .eslintrc.cjs  .prettierignore  .prettierrc.cjs  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
user/: index.html
(+3631 files in other folders)
